--- a/index.html
+++ b/index.html
@@ -973,7 +973,11 @@ function startRecoveryTimer(key, leftOverride, totalOverride) {
   var left  = (leftOverride !== undefined && leftOverride !== null) ? Math.min(leftOverride, total) : total;
   if (left <= 0) { clearActiveTimer(key); return; }
 
-  /* persist: save start timestamp and remaining duration */
+  /* Calcola il timestamp assoluto di scadenza — così ogni tick usa Date.now()
+     invece di decrementare left, immune al throttling di iOS Safari / PWA */
+  var endTime = Date.now() + (left * 1000);
+
+  /* persist: save endTime so we can restore after reload */
   saveActiveTimer(key, Date.now(), left, total);
 
   tmEl.classList.add('active');
@@ -1000,7 +1004,10 @@ function startRecoveryTimer(key, leftOverride, totalOverride) {
   }
 
   recoveryTimers[key] = setInterval(function() {
-    left--;
+    /* Ricalcola dal clock di sistema: se iOS ha "congelato" il tick per N secondi,
+       al risveglio il valore è già corretto senza bisogno di logica extra */
+    left = Math.round((endTime - Date.now()) / 1000);
+    if (left < 0) left = 0;
     updateDisplay();
     if (left <= 0) {
       clearInterval(recoveryTimers[key]);
@@ -1015,7 +1022,7 @@ function startRecoveryTimer(key, leftOverride, totalOverride) {
       var pb = document.getElementById('cp-'+key);
       if (pb) { pb.disabled = false; pb.style.opacity = ''; pb.style.cursor = ''; pb.classList.add('ready'); }
     }
-  }, 1000);
+  }, 500); /* 500ms per maggiore reattività al risveglio senza overhead */
 }
 
 function stopRecoveryTimer(key) {
@@ -1575,9 +1582,11 @@ buildAll();
   });
 })();
 
-/* ── TIMER FIX: ricalcola i timer quando l'utente torna sull'app ── */
-/* Su mobile, setInterval si congela in background: quando la pagina
-   torna visibile calcoliamo il tempo reale trascorso dal timestamp salvato */
+/* ── TIMER FIX: safety-net per iOS quando la pagina torna visibile ──
+   Con il nuovo approccio endTime-based i timer si autocorreggono già al
+   prossimo tick (500ms). Questo listener gestisce il caso estremo in cui
+   iOS ha sospeso completamente l'intervallo (es. PWA in background per
+   molto tempo): in quel caso riavviamo il timer con il tempo corretto. */
 document.addEventListener('visibilitychange', function() {
   if (document.visibilityState !== 'visible') return;
   var saved = loadActiveTimers();
@@ -1585,17 +1594,17 @@ document.addEventListener('visibilitychange', function() {
   Object.keys(saved).forEach(function(key) {
     var info = saved[key];
     if (!info || !info.start || !info.left || !info.total) return;
-    /* stop l'intervallo "congelato" se presente */
-    if (recoveryTimers[key]) {
-      clearInterval(recoveryTimers[key]);
-      recoveryTimers[key] = null;
-    }
     var elapsedSecs = Math.floor((now - info.start) / 1000);
     var left = info.left - elapsedSecs;
     if (left > 0) {
-      startRecoveryTimer(key, left, info.total);
+      /* Riavvia solo se l'intervallo è stato ucciso da iOS (non c'è handle attivo) */
+      if (!recoveryTimers[key]) {
+        startRecoveryTimer(key, left, info.total);
+      }
+      /* Se l'intervallo è ancora vivo, il prossimo tick (≤500ms) si ricalibra da solo */
     } else {
-      /* timer già scaduto mentre eravamo fuori */
+      /* Timer scaduto mentre l'app era in background */
+      if (recoveryTimers[key]) { clearInterval(recoveryTimers[key]); recoveryTimers[key] = null; }
       clearActiveTimer(key);
       var tmEl  = document.getElementById('rtm-'+key);
       var sEl   = document.getElementById('rts-'+key);
